# vgi-perf

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/perf-core/: Cargo.toml
crates/perf-core/examples/: gen_fixture.rs
crates/perf-core/src/: decode.rs  fixture.rs  lib.rs  rows.rs
crates/perf-core/tests/: golden.rs
crates/perf-worker/: Cargo.toml
crates/perf-worker/src/: arrow_build.rs  main.rs  meta.rs  source.rs
crates/perf-worker/src/scalar/: mod.rs  version.rs
crates/perf-worker/src/table/: comms.rs  events.rs  meta.rs  mmaps.rs  mod.rs  samples.rs  scan.rs
data/: callchain.data
test/sql/: bytes.test  events_comms.test  meta.test  mmaps.test  rangejoin.test  samples.test  version.test
