[workspace]
resolver = "2"
members = ["crates/perf-core", "crates/perf-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-perf"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.7 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0.9.5"
vgi-rpc = { version = "0.7.0", default-features = false, features = ["macros", "http"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# perf.data binary decode stack (mstange — the same parser behind the Firefox
# profiler). MIT/Apache-2.0, fully permissive. `zstd` enables transparent
# decompression of records in captures with a compressed PERF_RECORD_COMPRESSED.
linux-perf-data = "0.13"
linux-perf-event-reader = "0.10"

# The pure-Rust core crate, consumed by the worker.
perf-core = { path = "crates/perf-core", version = "0.1.0" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally for symbols.
strip = true
