[package]
name = "perf-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker that decodes the Linux perf.data binary format into SQL tables (samples, mmaps, comms, events, meta) for DuckDB over Apache Arrow"

[[bin]]
name = "perf-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
perf-core.workspace = true
log = "0.4"
env_logger = "0.11"
